# rusty-docs

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  example.js  index.js  package-lock.json  package.json  publish.js
.github/workflows/: publish.yml
src/: cleandoc.rs  docstrings.rs  extract.rs  generate.rs  lib.rs  main.rs
src/fixtures/: functions.py  overload.py  strawberry_type.py
src/snapshots/: rusty_docs__generate__tests__file_with_only_functions.snap  rusty_docs__generate__tests__overloaded_function.snap
src/templates/: function.md
