[package]
edition = "2021"
exclude = ["index.node"]
name = "rusty-docs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
minijinja = "0.23.0"
rustpython-ast = {features = ["unparse"], git = "https://github.com/charliermarsh/RustPython.git", rev = "778ae2aeb521d0438d2a91bd11238bb5c2bf9d4f"}
rustpython-common = {git = "https://github.com/charliermarsh/RustPython.git", rev = "778ae2aeb521d0438d2a91bd11238bb5c2bf9d4f"}
rustpython-parser = {features = ["lalrpop"], git = "https://github.com/charliermarsh/RustPython.git", rev = "778ae2aeb521d0438d2a91bd11238bb5c2bf9d4f"}
serde = "1.0.145"
textwrap = "0.15.1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]

[dev-dependencies]
insta = {version = "1.21.0", features = ["yaml"]}
pretty_assertions = "1.3.0"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
